# roq-cpp-samples

./: .gitattributes  .gitignore  .gitmodules  .syntastic_cpp_config  CHANGELOG.md  CMakeLists.txt  CPPLINT.cfg  ChangeLog.md  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac  create_conda_env.sh  git_init_submodules.sh  quinclas-examples.pc.in  roq-samples.pc.in
bench/: Makefile.am
benchmark/: .gitignore  CMakeLists.txt  Makefile.am  main.cpp  strategy.cpp
src/benchmark/: CMakeLists.txt  Makefile.am  main.cpp
src/collector/: CMakeLists.txt  Makefile.am  collector.cpp  collector.h  generator.cpp  generator.h  main.cpp  run.sh  test.csv
src/common/: CMakeLists.txt  Makefile.am  account.cpp  account.h  base_strategy.cpp  base_strategy.h  config.cpp  config.h  config_variables.cpp  config_variables.h  gateway.cpp  gateway.h  instrument.cpp  instrument.h  market_data.h  position.cpp  position.h  simple_strategy.cpp  simple_strategy.h
src/config/: CMakeLists.txt  Makefile.am  config_reader.cpp  config_reader.h  example.conf  json.cpp  json.h  key_value.cpp  key_value.h  main.cpp  strategy-group.sh  strategy.cpp  strategy.h  strategy.sh
src/order_management/: Makefile.am  base.cpp  base.h  main.cpp  market_data.h  strategy.cpp  strategy.h
src/reference/: Makefile.am  exposure.cpp  exposure.h  gateway_manager.cpp  gateway_manager.h  generator.cpp  generator.h  main.cpp  order.cpp  order.h  order_manager.cpp  order_manager.h  position_manager.cpp  position_manager.h  risk_manager.cpp  risk_manager.h  trading_model.cpp  trading_model.h  utilities.cpp  utilities.h
src/roq/algo/framework/: CMakeLists.txt  config.hpp  dispatcher.hpp  factory.hpp  handler.hpp  instrument.cpp  instrument.hpp  market.hpp  state.cpp  state.hpp
src/roq/algo/strategies/: CMakeLists.txt  README.md  base.cpp  base.hpp  factory.cpp  factory.hpp  order_manager.cpp  order_manager.hpp  spread.cpp  spread.hpp
src/roq/samples/: CMakeLists.txt  Makefile.am
src/roq/samples/algo-proto/: .gitignore  CMakeLists.txt  application.cpp  application.hpp  bridge.cpp  bridge.hpp  config.cpp  config.hpp  config.toml  main.cpp  route.cpp  route.hpp  settings.cpp  settings.hpp  test.sh
src/roq/samples/bridge/: .gitignore  CMakeLists.txt  application.cpp  application.h  application.hpp  bridge.cpp  bridge.h  bridge.hpp  config.cpp  config.h  config.hpp  flags.h  flags.hpp  main.cpp  settings.cpp  settings.hpp
src/roq/samples/collector/: CMakeLists.txt  Makefile.am  README.md  collector.cpp  collector.h  config.cpp  config.h  main.cpp  run.sh  simulate.sh
src/roq/samples/common/: CMakeLists.txt  Makefile.am  README.md  account.cpp  account.h  config.cpp  config.h  instrument.cpp  instrument.h  market_data.cpp  market_data.h  position.cpp  position.h  strategy.cpp  strategy.h  tokenizer.cpp  tokenizer.h
src/roq/samples/depth/: .gitignore  CMakeLists.txt  application.cpp  application.hpp  config.cpp  config.hpp  main.cpp  settings.cpp  settings.hpp  strategy.cpp  strategy.hpp  test.sh
src/roq/samples/event-log/: .gitignore  CMakeLists.txt  README.md  application.cpp  application.h  application.hpp  main.cpp  processor.cpp  processor.h  processor.hpp  run.sh
src/roq/samples/example-1/: .gitignore  CMakeLists.txt  Makefile.am  README.md  application.cpp  application.h  application.hpp  config.cpp  config.h  config.hpp  controller.cpp  controller.h  flags.cpp  flags.h  flags.hpp  main.cpp  settings.cpp  settings.hpp  strategy.cpp  strategy.h  strategy.hpp  test.sh
src/roq/samples/example-2/: .gitignore  CMakeLists.txt  Makefile.am  README.md  application.cpp  application.h  application.hpp  config.cpp  config.h  config.hpp  controller.cpp  controller.h  flags.cpp  flags.h  flags.hpp  instrument.cpp  instrument.h  instrument.hpp  main.cpp  settings.cpp  settings.hpp  strategy.cpp  strategy.h  strategy.hpp  test.sh  utilities.h
src/roq/samples/example-3/: .gitignore  CMakeLists.txt  Makefile.am  README.md  application.cpp  application.h  application.hpp  config.cpp  config.h  config.hpp  controller.cpp  controller.h  ema.cpp  ema.h  ema.hpp  flags.cpp  flags.h  flags.hpp  gdb_commands  instrument.cpp  instrument.h  instrument.hpp  main.cpp  model.cpp  model.h  model.hpp  new_simulation.sh  options.cpp  options.h  settings.cpp  settings.hpp  simulation.sh  strategy.cpp  strategy.h  strategy.hpp  test.sh  trading.sh  utilities.h
src/roq/samples/example-4/: .gitignore  CMakeLists.txt  Makefile.am  README.md  application.cpp  application.h  application.hpp  config.cpp  config.h  config.hpp  controller.cpp  controller.h  flags.cpp  flags.h  flags.hpp  main.cpp  settings.cpp  settings.hpp  strategy.cpp  strategy.h  strategy.hpp
src/roq/samples/example-5/: .gitignore  CMakeLists.txt  README.md  application.cpp  application.h  application.hpp  config.cpp  config.h  config.hpp  flags.h  flags.hpp  main.cpp  producer.cpp  producer.h  producer.hpp  settings.cpp  settings.hpp  strategy.cpp  strategy.h  strategy.hpp
src/roq/samples/example-6/: .gitignore  CMakeLists.txt  README.md  application.cpp  application.h  application.hpp  config.cpp  config.h  config.hpp  flags.h  flags.hpp  main.cpp  settings.cpp  settings.hpp  simulation.sh  strategy.cpp  strategy.h  strategy.hpp  trading.sh
src/roq/samples/example-7/: .gitignore  CMakeLists.txt  application.cpp  application.h  application.hpp  collector.cpp  collector.h  config.cpp  (+14 more)
src/simple/: CMakeLists.txt  Makefile.am  README.md  base.cpp  base.h  config.cpp  config.h  config_reader.cpp  config_reader.h  instruments.conf  main.cpp  market_data.h  position.cpp  position.h  run.sh  sim.sh  simple.conf  simulator.cpp  simulator.h  strategy.cpp  strategy.h
src/spread/: Makefile.am  config.cpp  config.h  config_reader.cpp  config_reader.h  main.cpp  run.sh  sim.sh  spread.conf  strategy.cpp  strategy.h
src/utilities/: CMakeLists.txt  Makefile.am  csv_reader.cpp  csv_reader.h  generator.cpp  generator.h  matcher.cpp  matcher.h  time_schedule.cpp  time_schedule.h
test/: .gitignore  CMakeLists.txt  CPPLINT.cfg  Makefile.am  test_time_schedule.cpp  tokenizer.cpp
(+362 files in other folders)
