add_subdirectory(example-1)
add_subdirectory(example-2)
add_subdirectory(example-3)
add_subdirectory(example-4)
add_subdirectory(example-5)
add_subdirectory(example-6)
add_subdirectory(example-7)
add_subdirectory(example-8)
add_subdirectory(import)
add_subdirectory(event-log)
add_subdirectory(bridge)
add_subdirectory(algo-proto)
add_subdirectory(republish)
add_subdirectory(io-context)
add_subdirectory(vwap)
add_subdirectory(metrics)
