add_subdirectory(algo-proto)
add_subdirectory(bridge)
add_subdirectory(depth)
add_subdirectory(event-log)
add_subdirectory(example-1)
add_subdirectory(example-2)
add_subdirectory(example-3)
add_subdirectory(example-4)
add_subdirectory(example-5)
add_subdirectory(example-6)
add_subdirectory(example-7)
add_subdirectory(example-8)
add_subdirectory(example-9)
add_subdirectory(import)
add_subdirectory(io-context)
add_subdirectory(metrics)
add_subdirectory(polling)
add_subdirectory(python)
add_subdirectory(republish)
add_subdirectory(rest)
add_subdirectory(strategy-1)
add_subdirectory(vwap)
